<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reference_generator</name>
  <version>0.1.0</version>
  <description>Implementation of a joint and task space reference generator</description>
  <author email="drisi@unisa.it">Davide Risi</author>
  <author email="alangella@unisa.it">Antonio Langella</author>
  <maintainer email="eferrentino@unisa.it">Enrico Ferrentino</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>acg_common_libraries</depend>
  <depend>acg_control_msgs</depend>
  <depend>acg_hardware_interface_facade</depend>
  <depend>controller_interface</depend>
  <depend>generate_parameter_library</depend>
  <depend>geometry_msgs</depend>
  <depend>kinematics_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>realtime_tools</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
